[gd_scene load_steps=3 format=2]

[ext_resource path="res://tarefa.gd" type="Script" id=1]
[ext_resource path="res://fundotela.jpg" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundotela" type="Sprite" parent="."]
position = Vector2( 512, 337 )
scale = Vector2( 1.29375, 1.17672 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 91.0
margin_top = 84.0
margin_right = 291.0
margin_bottom = 159.0
text = "Coletar dados"

[node name="Button2" type="Button" parent="."]
margin_left = 410.0
margin_top = 86.0
margin_right = 610.0
margin_bottom = 161.0
text = "Incrementar número"

[node name="Button3" type="Button" parent="."]
margin_left = 740.0
margin_top = 88.0
margin_right = 940.0
margin_bottom = 163.0
text = "Mudar nome"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 330.0
margin_top = 219.0
margin_right = 705.0
margin_bottom = 387.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 568.0
margin_top = 412.0
margin_right = 895.0
margin_bottom = 547.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 136.0
margin_top = 412.0
margin_right = 463.0
margin_bottom = 547.0

[node name="Label" type="Label" parent="."]
margin_left = 269.0
margin_top = 464.0
margin_right = 326.0
margin_bottom = 496.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
"

[node name="Label2" type="Label" parent="."]
margin_left = 706.0
margin_top = 471.0
margin_right = 754.0
margin_bottom = 496.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Label" parent="."]
margin_left = 355.0
margin_top = 229.0
margin_right = 688.0
margin_bottom = 243.0
text = "Insira primeiro um NÚMERO e segundo um NOME"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
